# Brain-Trust

./: .env.example  .gitignore  .mcp.json  README.md  SYSTEM_CAPABILITIES.md  Start Brain Trust.bat  TESTING.md  agents.json  app.py  brain_trust_crew.py  conftest.py  error_log.txt  job_manager.py  pyproject.toml  pytest.ini  requirements.txt  run_backend.bat  setup_pytest.sh  start_brain_trust.ps1
.agent/: coding_errors_memory.md  coding_methodology.md
.claude/: settings.local.json
agents/: __init__.py  kaiju_factory.py
backend/: .env.example  audit_drive.py  check_docs_api.py  debug_docs_api.py  debug_list.py  editorial_crew.py  explore_drive.py  organize_drive.py  pipeline_output.txt  read_prompts.py  reader_panel_report.md  requirements.txt  restructure_drive.py  schema.sql  setup_drive_template.py  start_server.py  test_character_workflow.py  test_docs_write.py  test_drive_connection.py  test_editor.py  test_editor_agent.py  test_editorial_team.py  test_export.py  test_librarian.py  test_librarian_logic.py  test_librarian_pytest.py  test_librarian_tools.py  test_permissions.py  test_pipeline.py  test_reader_panel.py  test_stress_suite.py  test_telos.py  test_workflow.py  verify_context_passing.py
cli/: __init__.py  interactive.py
colab/: BrainTrust_Drive_Setup.ipynb
config/: agents.yaml  models.yaml  tasks.yaml
design_specs/: AgentNode.tsx  karpathy_insights_integration.md  legion_architecture_v3.md  project_structure.md  schema.sql  workflow_parser.py
docs/: DEPLOYMENT_MODES.md  ENVIRONMENT.md  IMPLEMENTATION_PLAN.md  NEXT_STEPS_WILLOW.md  SECURITY.md  (+1 more)
(+115 files in other folders)
