[project]
name = "brain-trust"
version = "3.0.0"
description = "Legion v3 - AI Agent Orchestration Platform"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "crewai>=0.28.0",
    "langchain-google-genai>=1.0.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.0.10",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "discord.py>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.scripts]
legion = "cli:run"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*", "cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
